# Ailza-FAQ-1

./: Cargo.toml  README.md
data/: data.jsonl  emotions.json  faq.jsonl
src/: bert.rs  conversation.rs  index.html  main.rs  model.rs  preprocess.rs
