[package]
name = "ailza-faq-1"
version = "0.1.0"
edition = "2021"

[dependencies]
# ndarray for numerical operations
ndarray = { version = "0.15", features = ["serde", "rayon"] }

# rand for random number generation
rand = "0.8"

# serde and serde_json for serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# rayon for parallel processing (used by ndarray's rayon feature)
rayon = "1.5"

# regex for enhanced tokenization (optional)
regex = "1.5"

actix-web = "4"
actix-files = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_derive = "1"
parking_lot = "0.12"
once_cell = "1"
linfa = "0.6.1"
serde_urlencoded = "0.7"
uuid = { version = "1", features = ["v4"] }
linfa-clustering = "0.6" # Added for clustering functionalities
log = "0.4"
env_logger = "0.9"
